# gces_trabalho

./: Dockerfile  README.md  dconfig  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
docs_doxygen/html/: index.html  md_CODE_OF_CONDUCT.html  md_CONTRIBUTING.html  md_README.html  pages.html
docs_doxygen/latex/: refman.tex
docs_sphinx/: conf.py  index.rst  modules.rst
docs_sphinx/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  tests.data_pipeline.doctree  tests.doctree  tests.parser.doctree
docs_sphinx/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.data_pipeline.html  tests.html  tests.parser.html
env/: pyvenv.cfg
metabase/config/: metabase_database.env  postgres.env
