[tool.poetry]
name = "gces-trabalho"
version = "0.1.0"
description = ""
authors = ["Rodrigo <rodrigo080599@hotmail.com>"]
readme = "README.md"
packages = [{include = "gces_trabalho"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
